// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlanAssignment requires plan id to work: no plan id 1`] = `null`;

exports[`PlanAssignment shows an error message if no organizations: no orgs 1`] = `
<div
  className="global-error-container"
>
  <p>
    An error ocurred. Please try and refresh the page.
  </p>
  <p>
    The specific error is
    : 
    <span
      className="text-danger"
    >
      OpenSRPService list on organization failed, HTTP status 400
    </span>
  </p>
</div>
`;

exports[`PlanAssignment shows an error message if no plan jurisdiction hierarchy: no plan jurisdiction hierarchy 1`] = `
<div
  className="global-error-container"
>
  <p>
    An error ocurred. Please try and refresh the page.
  </p>
  <p>
    The specific error is
    : 
    <span
      className="text-danger"
    >
      OpenSRPService read on location/hierarchy/plan failed, HTTP status 400
    </span>
  </p>
</div>
`;

exports[`PlanAssignment shows an error message if no plan: no orgs 1`] = `
<div
  className="global-error-container"
>
  <p>
    An error ocurred. Please try and refresh the page.
  </p>
  <p>
    The specific error is
    : 
    <span
      className="text-danger"
    >
      OpenSRPService read on plans failed, HTTP status 400
    </span>
  </p>
</div>
`;
